--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,7 +25,7 @@
           <div class="flex flex-column">
             <label for="password"><strong>Password</strong></label>
             <input
-              type="text"
+              type="password"
               pInputText
               formControlName="password"
               class="width100"
