--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -4,7 +4,7 @@
       <h2>Sign Up</h2>
     </div>
   </div>
-  
+
 
     <div class="margin bg-white bg-login">
       <div class="margin">
@@ -53,7 +53,7 @@
             <div class="flex flex-column">
               <label for="desc"><strong>Password</strong></label>
               <input
-                type="text"
+                type="password"
                 pInputText
                 formControlName="password"
                 class="width100"
