--- a/src/app/singup/singup.component.html
+++ b/src/app/singup/singup.component.html
@@ -167,7 +167,7 @@
     <p-button
       label="ตกลง"
       styleClass="confirm-button"
-      (click)="successful = false"
+      (click)="successful = false" [routerLink]="['/login']"
     ></p-button>
   </div>
 </p-dialog>
